# EditLabel

./: CMakeCache.txt  EditVtk  EditVtk.cxx  Makefile  cmake_install.cmake  data.vtk  dataModified.vtk  map.txt  out.vtk  outsample.txt  relabelVtk.sh
readAndWriteVtk/: CMakeCache.txt  CMakeLists.txt  readAndWriteVtk.cxx
test/: CMakeLists.txt  test.cxx
test/LabelPlacementMapper/: CMakeCache.txt  CMakeLists.txt  LabelPlacementMapper  Makefile  cmake_install.cmake
